--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.7.1",
     "rxjs": "~6.4.0",
